--- a/FlightControlWeb/FlightControlWeb.csproj
+++ b/FlightControlWeb/FlightControlWeb.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="jquery" Version="3.5.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
