changed the server code to be more clean. also deleted the 's' fom the flightplan, and changed the url at the project, and added the ip port to be not hard coded.

--- a/FlightControlWeb/Properties/launchSettings.json
+++ b/FlightControlWeb/Properties/launchSettings.json
@@ -4,15 +4,15 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49467",
-      "sslPort": 44399
+      "applicationUrl": "http://localhost:5001",
+      "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      //"launchUrl": "weatherforecast",
+      "launchUrl": "index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
